# ChangeLog for dev-lisp/clozurecl
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clozurecl/ChangeLog,v 1.7 2012/03/31 10:17:47 grozin Exp $

*clozurecl-1.8 (31 Mar 2012)

  31 Mar 2012; Andrey Grozin <grozin@gentoo.org> -clozurecl-1.6.ebuild,
  +clozurecl-1.8.ebuild:
  Version bump

  08 Jan 2012; Andrey Grozin <grozin@gentoo.org> clozurecl-1.7.ebuild:
  Fix a compilation problem

*clozurecl-1.7 (04 Aug 2011)

  04 Aug 2011; Andrey Grozin <grozin@gentoo.org> -clozurecl-1.4.ebuild,
  -clozurecl-1.5.ebuild, +clozurecl-1.7.ebuild,
  -files/fix_user-homedir-pathname.patch:
  Version bump

  17 Dec 2010; Ulrich Mueller <ulm@gentoo.org> clozurecl-1.4.ebuild,
  clozurecl-1.5.ebuild, clozurecl-1.6.ebuild:
  Remove PROVIDE, commonlisp is now a new-style virtual.

*clozurecl-1.6 (10 Dec 2010)

  10 Dec 2010; Andrey Grozin <grozin@gentoo.org> +clozurecl-1.6.ebuild:
  Version bump

*clozurecl-1.5 (01 May 2010)

  01 May 2010; Andrey Grozin <grozin@gentoo.org> +clozurecl-1.5.ebuild:
  Version bump

*clozurecl-1.4 (17 Dec 2009)

  17 Dec 2009; Andrey Grozin <grozin@gentoo.org> +clozurecl-1.4.ebuild,
  +files/fix_user-homedir-pathname.patch, +metadata.xml:
  Initial import (from the lisp overlay)
