@@ -1,9 +1,9 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clozurecl/clozurecl-1.7.ebuild,v 1.2 2012/01/08 12:13:52 grozin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/clozurecl/clozurecl-1.7.ebuild,v 1.3 2012/06/07 17:31:50 zmedico Exp $
 
 EAPI=3
-inherit eutils
+inherit eutils multilib
 
 MY_PN=ccl
 MY_P=${MY_PN}-${PV}
