@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/cmucl
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cmucl/ChangeLog,v 1.38 2011/07/08 11:07:32 ssuominen Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/cmucl/ChangeLog,v 1.39 2012/06/07 17:33:19 zmedico Exp $
+
+  07 Jun 2012; Zac Medico <zmedico@gentoo.org> cmucl-20a.ebuild,
+  cmucl-20b_p001.ebuild:
+  inherit multilib for get_libdir
 
   08 Jul 2011; Samuli Suominen <ssuominen@gentoo.org> cmucl-20b_p001.ebuild:
   Convert from "useq" to "use".
